Note revision for 2.7.1

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.7.1 Released May 11, 2008
+2.7.1 Released May 11, 2008 (subversion r11250)
 
 	- Yet more minor testing tweaks. [GSM]
 
