--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.7.2
+2.7.2 Released May 14, 2008
 
+	- Handle embedded commas in quotes properly when destringifying 
+		arrays.(CPAN bug #35862) [GSM]
 	- Fix typo in docs with trace_parser_flags() (Martin J. Evans)
 	- More testing tweaks [GSM]
 
