--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.7.2 Released May 14, 2008
+2.7.2 Released May 14, 2008 (subversion r11269)
 
 	- Handle embedded commas in quotes properly when destringifying 
 		arrays.(CPAN bug #35862) [GSM]
