--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.7.3
+
+	- Fixed problem preventing some pg_type bind_arrays
+		from working [GSM]
+
 2.7.2 Released May 14, 2008 (subversion r11269)
 
 	- Handle embedded commas in quotes properly when destringifying 
