--- a/TODO
+++ b/TODO
@@ -1,14 +1,18 @@
-TODO: 
+Possible items to do, in no particular order
+
+Feature requests can be entered at 
+http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 
 - Use WITH HOLD for cursor work
-- Start testing with a thread-enabled Perl
-- Create a .ppm for Windows
+- Devise a way to automatically create ppm for Windows builds
+- I8n docs and error messages
 - Change quote and dequote functions to take Sv instead of string so that
    things like arrays can be serialized by the quote function.  This will
    take care of broken chopblanks and pg_bool_tf (pass the quote/dequote 
-   options struct to function quote/dequote functions).
-- Allow user callbacks to quote user-defined types?
+   options struct to function quote/dequote functions)
+- Allow user callbacks to quote user-defined types
 - Move to the Module::Build system
+- Test heavily with a thread-enabled Perl
 - Remove libpq dependency
 - Handle and/or better tests for different encoding, especially those not 
    supported as a server encoding (e.g. BIG5)
