Rewrite the entry on library errors a bit.

--- a/README
+++ b/README
@@ -167,16 +167,20 @@ the documentation for more details.
 
 * PostgreSQL library issues:
 
-If you are using the shared library libpq.so check if your dynamic
-loader finds libpq.so. With Linux the command /sbin/ldconfig -v should
-tell you where it finds libpq.so. If ldconfig does not find libpq.so,
-either add an appropriate entry to /etc/ld.so.conf and re-run ldconfig
-or add the path to the environment variable LD_LIBRARY_PATH.
+DBD::Pg uses the libpq library that comes with Postgres. If the shared libpq 
+library is not available, DBD::Pg will error with a message that 
+usually mentions a file names libpq.so, like this:
 
-A typical error message resulting from not finding libpq.so is: 
+    Can't load './blib/arch/auto/DBD/Pg/Pg.so' for module DBD::Pg: libpq.so.5: cannot open 
+    shared object file: No such file or directory at .../DynaLoader.pm line 230.
 
-	install_driver(Pg) failed: Can't load './blib/arch/auto/DBD/Pg/Pg.so' 
-	for module DBD::Pg: File not found at
+This means that the libraries are not installed in a place where the system 
+can find them when it tries to load the Pg.so file. On some systems, you 
+can run /sbin/ldconfig -v to see a list of shared modules, or just search 
+the system for the file with "locate libpq.so". If it exists but is not being 
+loaded, you may need to add the directory it is in to /etc/ld.so.conf file 
+and run the ldconfig command. Otherwise, you may need to add the path to 
+the environment variable LD_LIBRARY_PATH.
 
 If you get an error message like:
 
@@ -186,9 +190,7 @@ If you get an error message like:
 
 when you call DBI->connect, then your libpq.so was probably not seen at
 build-time.  This should have caused 'make test' to fail; did you really
-run it and look at the output? Check the setting of POSTGRES_LIB and
-recompile DBD-Pg.
- 
+run it and look at the output? 
 
 * Perl issues:
 
