--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@
 		via $dbh->pg_notifies() [GSM]
 	- Fixed problem preventing some pg_type bind_arrays
 		from working [GSM]
+	- Fix tests in t.04misc.t to handle Windows newlines.
+		(CPAN bug #36237) [Ian Macdonald]
 
 2.7.2 Released May 14, 2008 (subversion r11269)
 
