--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.8.0
+2.8.0 Released June 1, 2008
 
 	- Added in payload strings for LISTEN/NOTIFY in 8.4 
 		via $dbh->pg_notifies() [GSM]
@@ -8,6 +8,7 @@
 		from working [GSM]
 	- Fix tests in t.04misc.t to handle Windows newlines.
 		(CPAN bug #36237) [Ian Macdonald]
+	- Clean up get_info() information. [GSM]
 
 2.7.2 Released May 14, 2008 (subversion r11269)
 
