--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.8.1
+
+	- Force testing to use a custom socket dir, to avoid 
+		permission problems. Thanks to Frank Wiegand for 
+		help in uncovering this. [GSM]
+
 2.8.0 Released June 1, 2008 (subversion r11366)
 
 	- Added in payload strings for LISTEN/NOTIFY in 8.4 
