--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.8.2
+2.8.2 Released June 29, 2008
+
+	- Minor testing tweaks, doc fixes.
 
 2.8.1 Released June 11, 2008 (subversion r11417)
 
