Note subversion revision for 2.8.2

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.8.2 Released June 29, 2008
+2.8.2 Released June 29, 2008 (subversion r11466)
 
 	- Minor testing tweaks, doc fixes.
 
