--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.8.3 Released July 5, 2008
+
+	- Minor testing tweaks.
+
 2.8.2 Released June 29, 2008 (subversion r11466)
 
 	- Minor testing tweaks, doc fixes.
