Last notes before upload.

--- a/Changes
+++ b/Changes
@@ -1,8 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.8.3 Released July 5, 2008
+2.8.3 Released July 6, 2008
 
-	- Minor testing tweaks.
+	- Minor testing functionality tweaks, lots of test cleanups, minor doc enhancements.
 
 2.8.2 Released June 29, 2008 (subversion r11466)
 
