Note revision for 2.8.3

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.8.3 Released July 6, 2008
+2.8.3 Released July 6, 2008 (subversion r11495)
 
 	- Minor testing functionality tweaks, lots of test cleanups, minor doc enhancements.
 
