--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.8.4 Released July 10, 2008
+
+	- Minor Perl::Critic test adjustments
+
 2.8.3 Released July 6, 2008 (subversion r11495)
 
 	- Minor testing functionality tweaks, lots of test cleanups, minor doc enhancements.
