--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@
 2.8.4 Released July 10, 2008
 
 	- Minor Perl::Critic test adjustments.
-	- Documentation enhancents.
+	- Documentation enhancements.
 	- Yet more minor testing tweaks.
 
 2.8.3 Released July 6, 2008 (subversion r11495)
