--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@
 2.8.6 Released July 20, 2008
 
 	- More testing improvements to increase odds of all tests being
-		run, especialy when testing as root. [GSM]
+		run, especially when testing as root. [GSM]
 
 2.8.5 Released July 13, 2008 (subversion r11529)
 
