--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.8.7
+
+	- Modify test scripts to work better on freebsd boxes.
+	- Documentation improvements.
+
 2.8.6 Released July 21, 2008 (subversion r11558)
 
 	- More testing improvements to increase odds of all tests being
