--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
 
 2.8.7
 
-	- Modify test scripts to work better on freebsd boxes.
+	- Modify test scripts to work better on FreeBSD boxes.
 	- Documentation improvements.
 
 2.8.6 Released July 21, 2008 (subversion r11558)
