--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@
 2.8.7
 
 	- Modify test scripts to work better on FreeBSD boxes.
-	- Documentation improvements.
+	- Much documentation improvement and POD tweaking.
 
 2.8.6 Released July 21, 2008 (subversion r11558)
 
