--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.8.8
+
+	- Move PQexec structures to statement handle, to prevent 
+		excessive malloc and free within execute function. [GSM]
+
 2.8.7 Released July 24, 2008 (subversion r11582)
 
 	- Modify test scripts to work better on FreeBSD boxes.
