--- a/Changes
+++ b/Changes
@@ -1,10 +1,14 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.8.8
+2.9.0
 
+	- Add support for database handle attribute "ReadOnly". This allows 
+		use of $dbh->{ReadOnly} = 1 to enforce read only mode at 
+		the server level. [GSM]
 	- Move PQexec structures to statement handle, to prevent 
 		excessive malloc and free within execute function. [GSM]
-	- More testing tweaks.
+	- Add more attribute tests, improve testing system.
+	- Many documentation improvements.
 
 2.8.7 Released July 24, 2008 (subversion r11582)
 
