--- a/README
+++ b/README
@@ -6,7 +6,7 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 2.8.8 of DBD::Pg, the Perl interface to Postgres using DBI. 
+This is version 2.9.0 of DBD::Pg, the Perl interface to Postgres using DBI. 
 The web site for this interface, and the latest version, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
@@ -62,7 +62,7 @@ REQUIREMENTS:
 DBD::Pg needs to know where to find the libpq libraries: this is usually done 
 by checking the output of the pg_config executable. If pg_config is not available, 
 then you may need to install the development package for PostgreSQL. To do this 
-on Debian and ubuntu, use: apt-get install postgresql-dev; on RedHat and CentOS, 
+on Debian and Ubuntu, use: apt-get install postgresql-dev; on RedHat and CentOS, 
 use: yum install postgresql-devel. Note that the development libraries are needed 
 even if you already have PostgreSQL up and running.
 
@@ -95,7 +95,7 @@ If the script cannot find the pg_config information itself, it will
 ask you for the path to it. Enter the complete path to the pg_config 
 file here, including the name of the file itself.
 
-yTESTING:
+TESTING:
 --------
 
 The tests rely on being able to connect to a valid Postgres database. 
