--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 - Make docs easier to read on their own without lots of DBI cross referencing.
 - Use WITH HOLD for cursor work
 - Devise a way to automatically create ppm for Windows builds
-- I8n docs and error messages
+- I8N docs and error messages
 - Change quote and dequote functions to take Sv instead of string so that
    things like arrays can be serialized by the quote function.  This will
    take care of broken chopblanks and pg_bool_tf (pass the quote/dequote 
@@ -17,4 +17,4 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 - Remove libpq dependency
 - Handle and/or better tests for different encoding, especially those not 
    supported as a server encoding (e.g. BIG5)
-
+- Support passing hashrefs in and out for custom types.
