--- a/Changes
+++ b/Changes
@@ -7,8 +7,8 @@
 		the server level. [GSM]
 	- Move PQexec structures to statement handle, to prevent 
 		excessive malloc and free within execute function. [GSM]
-	- Add more attribute tests, improve testing system.
-	- Many documentation improvements.
+	- Add more attribute tests, improve testing system. [GSM]
+	- Many documentation improvements. [GSM]
 	- Win32 build improvements [T.J. Ferraro]
 
 2.8.7 Released July 24, 2008 (subversion r11582)
