Fix incorrect mapping of PG array to Perl array. Reported by Alex Cheshev on the dbi-users mailing list. CPAN bug #38552. Bump version to 2.9.1.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.9.1 Released August 17, 2008
+
+	  - Return undef when mapping Postgres array to Perl array and 
+	  	the array is empty '{}'. (CPAN bug #38552) [GSM]
+
 2.9.0 Released August 3, 2008 (subversion r11624)
 
 	- Add support for database handle attribute "ReadOnly". This allows 
