--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.9.2 Released August 18, 2008
+2.9.2 Released August 18, 2008 (subversion r11664)
 
 	- Empty Postgres arrays should return empty Perl arrays, not undef.
 		(CPAN bug #38552) [David E. Wheeler]
