--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.10.0
+
+	- Add the 'DBD' trace setting to output only non-DBI trace messages. [GSM]
+
 2.9.2 Released August 18, 2008 (subversion r11664)
 
 	- Empty Postgres arrays should return empty Perl arrays, not undef.
