--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
 	- Add the 'DBD' trace setting to output only non-DBI trace messages, 
 		and allow 'dbd_verbose' as a connection attribute for the same 
 		effect. [GSM]
+	- Fix a minor problem with testing against 7.4 databases [GSM]
 
 2.9.2 Released August 18, 2008 (subversion r11664)
 
