--- a/TODO
+++ b/TODO
@@ -3,7 +3,6 @@ Possible items to do, in no particular order
 Feature requests can be entered at 
 http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 
-- Make docs easier to read on their own without lots of DBI cross referencing.
 - Use WITH HOLD for cursor work
 - Devise a way to automatically create ppm for Windows builds
 - I8N docs and error messages
@@ -18,3 +17,4 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 - Handle and/or better tests for different encoding, especially those not 
    supported as a server encoding (e.g. BIG5)
 - Support passing hashrefs in and out for custom types.
+- Support a flag for behinf-the-scenes CURSOR to emulate partial fetches.
