Note revision for 2.10.1

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.10.1 Released August 31, 2008
+2.10.1 Released August 31, 2008 (subversion r11697)
 
 	- Minor testing fix.
 
