--- a/TODO
+++ b/TODO
@@ -18,3 +18,5 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
    supported as a server encoding (e.g. BIG5)
 - Support passing hashrefs in and out for custom types.
 - Support a flag for behind-the-scenes CURSOR to emulate partial fetches.
+- Handle unicode conversion better and perhaps eliminate the need for 
+  the pg_enable_utf8 attribute.
