--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.10.5 Released September 16, 2008
+2.10.5 Released September 16, 2008 (subversion r11800)
 
 	- Fix SIGNATURE file
 
