--- a/Changes
+++ b/Changes
@@ -2,7 +2,10 @@
 
 2.10.6
 
-	- Skip unicode tests if server is set to 'LATIN1'
+	- Correctly quote all bytea characters. (CPAN bug #39390) [Rod Taylor]
+	- Prevent core dump when checking $dbh->{standard_conforming_strings}
+		on older servers. [GSM]
+	- Skip unicode tests if server is set to 'LATIN1' [GSM]
 
 2.10.5 Released September 16, 2008 (subversion r11800)
 
