--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.10.6 Released September 19, 2008
+2.10.6 Released September 19, 2008 (subversion r11830)
 
 	- Correctly quote all bytea characters. (CPAN bug #39390) [Rod Taylor]
 	- Prevent core dump when checking $dbh->{standard_conforming_strings}
