--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.10.7 Released September 22, 2008
+2.10.7 Released September 22, 2008 (subversion r11869)
 
 	- Fix test issue when dbname contains dashes.
 		[Rainer Tammer]
