--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.11.1 Released October 14, 2008
+
+2.11.2 Released October 15, 2008
+
+	- Fix core dump when invalid placeholders used. (CPAN bug #40075) [GSM]
+
+2.11.1 Released October 14, 2008 (subversion r11980)
 
 	- $sth->{ParamTypes} returns 'TYPE' when possible.
 
