Force 'C' so tests pass when running in non-English environments. CPAN bug #40604

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
+2.11.3 Released November 3, 2008
+
+	- Force LC_MESSAGES to 'C' inside tests (CPAN bug #40604)
+	- Minor compiler tweaks.
 	- Fix small POD error (CPAN bug #40209)
 	- Tweak Perl::Critic policy list (CPAN bug #40130)
 
