--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.11.7 Released December 13, 2008
+2.11.7 Released December 13, 2008 (subversion r12158)
 
   - Fix placeholder parsing logic (CPAN bug #41582)
 
