--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.11.8 
+??
+
+  - Fixed minor bug in POD docs. [Tim Mattison]
+
+2.11.8 Released December 28, 2008
 
   - Fix minor bug in t/12placeholders.t test (CPAN bug #41723)
 
