--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
-2.11.9
+2.12.0
 
+  - Change large object interface from lo_* to pg_lo_* and make them accessible 
+    via direct $dbh calls (e.g. $dbh->pg_lo_import instead of $dbh->func(..,'pg_lo_import').
+    The use of $dbh->func(... 'lo_*') is deprecated. [GSM] (CPAN bug #44467)
   - Throw an exception for large_object functions called when AutoCommit is on, 
-    but allow lo_import and lo_export to work. Reported by Kynn Jones.
+    but allow pg_lo_import and pg_lo_export to work. Reported by Kynn Jones.
     [GSM] (CPAN bug #44461)
   - Fix a memory leak when parsing returned arrays. Reported by Bálint Szilakszi.
     [GSM] (CPAN bug #44225)
