--- a/README
+++ b/README
@@ -1,13 +1,3 @@
-===================================================
-WARNING!!
-
-THIS IS A TEST VERSION (2.11.8_1) AND SHOULD BE USED 
-FOR TESTING PURPOSES ONLY. PLEASE USE A STABLE 
-VERSION (no underscore) BY VISITING:
-
-http://search.cpan.org/dist/DBD-Pg/
-===================================================
-
 DBD::Pg  --  the DBI PostgreSQL interface for Perl
 
 # $Id$
@@ -15,7 +5,7 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 2.11.8_1 of DBD::Pg, the Perl interface to Postgres using DBI. 
+This is version 2.12.0 of DBD::Pg, the Perl interface to Postgres using DBI. 
 The web site for this interface, and the latest version, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
